Bug 547353 - [OOPP] Mouse pointer coordinates misaligned with winless Silverlight. r=bent.